# tblkit

./: .gitignore  LICENSE  README.md  USAGE_COOKBOOK.md  errors.txt  pyproject.toml  sp500_below_200dma.csv  test.py
examples/: README.md
tblkit/: __init__.py  core.py
tblkit/examples/: sp500_below_200dma.sample.csv
tblkit/utils/: __init__.py  columns.py  formatters.py  io.py  logging.py  parsing.py
tests/: test_columns.py  test_core_args_extended.py  test_core_basic.py  test_core_comprehensive.py  test_tbl_concat_extended.py
